@@ -1,38 +1,29 @@
-package com.assylzhana.user_service.model;
+package com.assylzhana.collaboration_service.dto;
 
-import jakarta.persistence.*;
-import lombok.Data;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@Entity
-@Table(name="users")
-@Data
-public class User implements UserDetails {
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+public class UserDto implements UserDetails {
     private Long id;
-    @Column(unique = true)
     private String email;
-
-    @Column(unique = true)
-    private String username;
-
     private String password;
-    private String provider;
-    private String providerId;
-    @Enumerated(EnumType.STRING)
-    private Role role;
-    private boolean enabled = false;
-    @OneToMany(mappedBy = "user")
-    private List<VerificationToken> tokens;
+    private String role;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(role);
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 
     @Override
@@ -52,6 +43,11 @@ public class User implements UserDetails {
 
     @Override
     public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
         return true;
     }
 }
